# tauri-cv-agent

./: .gitignore  README.md  index.html  package.json
playwright/: package.json
playwright/src/: args.js  ats-agent.js  captcha.js  index.js  latex.js  ollama.js  orchestrator.js  utils.js
playwright/src/sites/: catho.js  generic.js  indeed.js  infojobs.js  linkedin.js
src/: App.module.css  App.tsx  index.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  latex.rs  lib.rs  main.rs  ollama.rs  queue.rs  resume.rs  texlive.rs
src/pages/: PageHistory.tsx  PageNightMode.module.css  PageNightMode.tsx  PageReport.tsx  PageResumes.module.css  PageResumes.tsx  PageSearch.module.css  PageSearch.tsx
src/store/: appStore.ts
temp-latex/: main.tex
